[insteon] Rewrite insteon binding
* introduced device configuration automated determination
* converted mode-based number items to string type with descriptive states
* added number items uom support
* added scenes and x10 device things
* added distinct bridge things for supported hub/plm devices
* added button event trigger channels
* added device products configuration layer
* added device link database support
* added device cache storage
* added device operating flags controls
* added modem configuration flags controls
* added related devices synchronization feature
* added heartbeat timeout monitor
* added ability to link/unlink a device to the modem
* added ability to add missing default links
* added link database & scene management support
* added scene state support
* added new i3 devices basic support
* added ezrain sprinkler device support
* revamped console commands with auto-completion support
* improved discovery service
* improved thing status

Signed-off-by: jsetton <jeremy.setton@gmail.com>